move_cursor_up moved to handle_keyboard.c && impl

--- a/src/rendering/TODO
+++ b/src/rendering/TODO
@@ -1,5 +1,28 @@
 TODO
 
+Today:
+  >> Increase my productivity
+    >> Create midge to be more productive tool for me to use than vs-code
+      >> I need to use the editor to create / prototype the init process
+        >> Implement code-editor functions
+          >> up
+          >> end
+          >> enter
+        >> Implement suggestion box
+          >> ...
+          >> tab
+
+
+
+
+
+
+
+
+
+
+
+
 
 > do relative directory stuff with a ignored config home directory
 > do better thread handling of errors and reporting for off-threads
