--- a/src/rendering/TODO
+++ b/src/rendering/TODO
@@ -5,7 +5,7 @@ Today:
     >> Create midge to be more productive tool for me to use than vs-code
       >> I need to use the editor to create / prototype the init process
         >> Implement code-editor functions
-          >> up
+          >> home
           >> end
           >> enter
         >> Implement suggestion box
