suggestion box rendering

--- a/src/rendering/TODO
+++ b/src/rendering/TODO
@@ -4,11 +4,10 @@ Today:
   >> Increase my productivity
     >> Create midge to be more productive tool for me to use than vs-code
       >> I need to use the editor to create / prototype the init process
-        >> Implement code-editor functions
-          >> enter
         >> Implement suggestion box
-          >> ...
-          >> tab
+          >> type in s... { suggest special_data struct}
+          >> tab selects and places rest of word in editor
+        >> create process...
 
 
 
