--- a/src/rendering/TODO
+++ b/src/rendering/TODO
@@ -12,7 +12,7 @@ Today:
 
 
 
-
+mc_code_transcription: search 166 : TODO - factor in array field declarations in field_info and in the determine_type_expression methods
 
 
 
